tests/negative/gold/check_method_test.gold
tests/negative/check_method_test.toit:5:8: error: Toplevel functions can't have the 'static' modifier
static foo: unresolved
       ^~~
tests/negative/check_method_test.toit:6:1: error: Operators may not be static
operator + other: unresolved
^~~~~~~~~~
tests/negative/check_method_test.toit:8:1: error: Invalid name
foo.bar: unresolved
^~~~~~~
tests/negative/check_method_test.toit:10:10: error: Static functions can't be abstract
abstract gee:
         ^~~
tests/negative/check_method_test.toit:14:10: error: Constructors can't be static
  static constructor: unresolved
         ^~~~~~~~~~~
tests/negative/check_method_test.toit:16:3: error: Invalid name
  foo.bar: unresolved
  ^~~~~~~
tests/negative/check_method_test.toit:19:12: error: Constructors can't be abstract
  abstract constructor
           ^~~~~~~~~~~
tests/negative/check_method_test.toit:20:19: error: Static functions can't be abstract
  abstract static foo
                  ^~~
tests/negative/check_method_test.toit:21:12: error: Abstract members can't have bodies
  abstract bar:
           ^~~
tests/negative/check_method_test.toit:25:3: error: Interfaces can't have constructors
  constructor: unresolved
  ^~~~~~~~~~~
tests/negative/check_method_test.toit:27:3: error: Interface members can't have bodies
  foo:
  ^~~
tests/negative/check_method_test.toit:30:12: error: Interface members can't be declared abstract
  abstract bar
           ^~~
tests/negative/check_method_test.toit:32:12: error: Interface members can't be declared abstract
  abstract gee:
           ^~~
tests/negative/check_method_test.toit:32:12: error: Interface members can't have bodies
  abstract gee:
           ^~~
tests/negative/check_method_test.toit:36:12: error: Monitor functions can't be abstract
  abstract foo
           ^~~
tests/negative/check_method_test.toit:38:12: error: Monitor functions can't be abstract
  abstract bar:
           ^~~
tests/negative/check_method_test.toit:5:13: error: Unresolved identifier: 'unresolved'
static foo: unresolved
            ^~~~~~~~~~
tests/negative/check_method_test.toit:6:19: error: Unresolved identifier: 'unresolved'
operator + other: unresolved
                  ^~~~~~~~~~
tests/negative/check_method_test.toit:8:10: error: Unresolved identifier: 'unresolved'
foo.bar: unresolved
         ^~~~~~~~~~
tests/negative/check_method_test.toit:11:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/check_method_test.toit:14:23: error: Unresolved identifier: 'unresolved'
  static constructor: unresolved
                      ^~~~~~~~~~
tests/negative/check_method_test.toit:16:12: error: Unresolved identifier: 'unresolved'
  foo.bar: unresolved
           ^~~~~~~~~~
tests/negative/check_method_test.toit:22:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/check_method_test.toit:25:16: error: Unresolved identifier: 'unresolved'
  constructor: unresolved
               ^~~~~~~~~~
tests/negative/check_method_test.toit:28:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/check_method_test.toit:33:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/check_method_test.toit:39:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
Compilation failed.
